# rust-to-prod

./: Cargo.toml  Dockerfile  README.md  bacon.toml  s  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20230625021933_create_subscriptions_table.sql  20230721184938_make_status_not_null_in_subscriptions.sql  20230726234924_seed_user.sql  20230727232952_create_idempotency_table.sql  20230728004205_relax_null_checks_on_idempotency.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
